--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -38,6 +38,7 @@
           <div class="nav-collapse">
             <ul class="nav">
               <li class="active"><a href="#">Home</a></li>
+              <li><a href="#somos">Qu&iacuete;enes somos?</a></li>
               <li><a href="#about">Blog</a></li>
               <li><a href="#contact">Contacto</a></li>
             </ul>
