--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -8,14 +8,14 @@
     <meta name="author" content="">
 
     <!-- Le styles -->
-    <link href="css/bootstrap.css" rel="stylesheet">
+    <link href="/css/bootstrap.css" rel="stylesheet">
     <style type="text/css">
       body {
         padding-top: 60px;
         padding-bottom: 40px;
       }
     </style>
-    <link href="css/bootstrap-responsive.css" rel="stylesheet">
+    <link href="/css/bootstrap-responsive.css" rel="stylesheet">
 
     <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
@@ -34,11 +34,11 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </a>
-          <a class="brand" href="#">Unacinux</a>
+          <a class="brand" href="/">Unacinux</a>
           <div class="nav-collapse">
             <ul class="nav">
-              <li class="active"><a href="#">Home</a></li>
-              <li><a href="#somos">Qu&iacute;enes somos?</a></li>
+              <li class="active"><a href="/">Home</a></li>
+              <li><a href="/about">Qu&iacute;enes somos?</a></li>
               <li><a href="#about">Blog</a></li>
               <li><a href="#contact">Contacto</a></li>
             </ul>
@@ -58,11 +58,11 @@
 
     <!-- Grab Google CDN's jQuery, with a protocol relative URL; fall back to local if offline -->
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
-    <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.7.2.min.js"><\/script>')</script>
+    <script>window.jQuery || document.write('<script src="/js/vendor/jquery-1.7.2.min.js"><\/script>')</script>
 
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/bootstrap-carousel.js"></script>
-    <script src="js/main.js"></script>
+    <script src="/js/bootstrap.min.js"></script>
+    <script src="/js/bootstrap-carousel.js"></script>
+    <script src="/js/main.js"></script>
 
   </body>
 </html>
