--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -26,34 +26,13 @@
 
   <body>
 
-    <div class="navbar navbar-fixed-top">
-      <div class="navbar-inner">
-        <div class="container">
-          <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </a>
-          <a class="brand" href="/">Unacinux</a>
-          <div class="nav-collapse">
-            <ul class="nav">
-              <li class="active"><a href="/">Home</a></li>
-              <li><a href="/about">Qu&iacute;enes somos?</a></li>
-              <li><a href="#about">Blog</a></li>
-              <li><a href="#contact">Contacto</a></li>
-            </ul>
-          </div><!--/.nav-collapse -->
-        </div>
-      </div>
-    </div>
+    {% include navbar.html %}
 
     <div class="container">
       {{ content }}
 
       <hr>
-      <footer>
-        <p>&copy; Unacinux 2012</p>
-      </footer>
+      {% include footer.html %}
     </div> <!-- /container -->
 
     <!-- Grab Google CDN's jQuery, with a protocol relative URL; fall back to local if offline -->
