--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -29,7 +29,8 @@
     {% include navbar.html %}
 
     <div class="container">
-      {{ content }}
+
+      {{ content | markdownify }}
 
       <hr>
       {% include footer.html %}
