--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -16,6 +16,8 @@
       }
     </style>
     <link href="/css/bootstrap-responsive.css" rel="stylesheet">
+    <link href="/css/main.css" rel="stylesheet">
+    <link href='http://fonts.googleapis.com/css?family=Merriweather|Open+Sans|Vollkorn' rel='stylesheet' type='text/css'>
 
     <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
