--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -10,8 +10,9 @@
       <div class="nav-collapse">
         <ul class="nav">
           <li class="active"><a href="/">Home</a></li>
-          <li><a href="/about">¿Qu&iacute;enes somos?</a></li>
           <li><a href="/blog">Blog</a></li>
+          <li><a href="/projects">Proyectos</a></li>
+          <li><a href="/about">Sobre nosotros</a></li>
           <li><a href="#contact">Contacto</a></li>
         </ul>
       </div><!--/.nav-collapse -->
