--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -2,10 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Unacinux</title>
+    <title>{% if page.title %}{{ page.title }} - {% endif %}{{ site.title }}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    {% if page.description %}
+    <meta name="description" content="{{ page.description }}" />
+    {% else %}
+    <meta name="description" content="{{ site.description }}" />
+    {% endif %}
+    <meta name="author" content="{{ site.author }}">
 
     <!-- Le styles -->
     <link href="/css/bootstrap.css" rel="stylesheet">
